# keyple-service-resource-cpp-lib

./: CMakeLists.txt  NOTICE.md  PUBLISHERS.yml  README.md  _config.yml  index.md  list_versions.md
2.0.1/: _card_profile_manager_adapter_8cpp.html  _card_profile_manager_adapter_8cpp__incl.map  _card_profile_manager_adapter_8cpp__incl.md5  _card_profile_manager_adapter_8cpp_source.html  _card_profile_manager_adapter_8h.html  _card_profile_manager_adapter_8h__dep__incl.md5  _card_profile_manager_adapter_8h__incl.map  _card_profile_manager_adapter_8h__incl.md5  _card_profile_manager_adapter_8h_source.html  _card_resource_8cpp.html  _card_resource_8cpp_source.html  _card_resource_8h.html  _card_resource_8h_source.html  _card_resource_profile_configurator_8cpp.html  _card_resource_profile_configurator_8cpp_source.html  _card_resource_profile_configurator_8h.html  _card_resource_profile_configurator_8h_source.html  _card_resource_profile_extension_8h.html  _card_resource_profile_extension_8h_source.html  _card_resource_service_8h.html  _card_resource_service_8h__incl.map  _card_resource_service_8h__incl.md5  _card_resource_service_8h_source.html  _card_resource_service_adapter_8cpp.html  _card_resource_service_adapter_8cpp__incl.map  _card_resource_service_adapter_8cpp__incl.md5  _card_resource_service_adapter_8cpp_source.html  _card_resource_service_adapter_8h.html  _card_resource_service_adapter_8h__incl.map  _card_resource_service_adapter_8h__incl.md5  _card_resource_service_adapter_8h_source.html  _card_resource_service_configurator_8h.html  _card_resource_service_configurator_8h__incl.map  _card_resource_service_configurator_8h__incl.md5  _card_resource_service_configurator_8h_source.html  _card_resource_service_configurator_adapter_8cpp.html  _card_resource_service_configurator_adapter_8cpp__incl.map  _card_resource_service_configurator_adapter_8cpp__incl.md5  _card_resource_service_configurator_adapter_8cpp_source.html  _card_resource_service_configurator_adapter_8h.html  (+106 more)
2.0.2/: _card_profile_manager_adapter_8cpp.html  _card_profile_manager_adapter_8cpp_source.html  _card_profile_manager_adapter_8h.html  _card_profile_manager_adapter_8h_source.html  _card_resource_8cpp.html  _card_resource_8cpp_source.html  _card_resource_8h.html  _card_resource_8h__dep__incl.map  _card_resource_8h_source.html  _card_resource_profile_configurator_8cpp.html  _card_resource_profile_configurator_8cpp__incl.map  _card_resource_profile_configurator_8cpp_source.html  _card_resource_profile_configurator_8h.html  _card_resource_profile_configurator_8h__dep__incl.md5  _card_resource_profile_configurator_8h_source.html  _card_resource_profile_extension_8h.html  _card_resource_profile_extension_8h__dep__incl.md5  _card_resource_profile_extension_8h_source.html  _card_resource_service_8h.html  _card_resource_service_8h_source.html  _card_resource_service_adapter_8cpp.html  _card_resource_service_adapter_8cpp__incl.map  _card_resource_service_adapter_8cpp_source.html  _card_resource_service_adapter_8h.html  _card_resource_service_adapter_8h__incl.map  _card_resource_service_adapter_8h_source.html  _card_resource_service_configurator_8h.html  _card_resource_service_configurator_8h__incl.map  _card_resource_service_configurator_8h_source.html  _card_resource_service_configurator_adapter_8cpp.html  _card_resource_service_configurator_adapter_8cpp__incl.map  _card_resource_service_configurator_adapter_8cpp_source.html  _card_resource_service_configurator_adapter_8h.html  _card_resource_service_configurator_adapter_8h__incl.md5  _card_resource_service_configurator_adapter_8h_source.html  _card_resource_service_provider_8cpp.html  _card_resource_service_provider_8cpp__incl.map  _card_resource_service_provider_8cpp__incl.md5  _card_resource_service_provider_8cpp_source.html  _card_resource_service_provider_8h.html  (+84 more)
2.0.3-SNAPSHOT/: _card_profile_manager_adapter_8cpp.html  _card_profile_manager_adapter_8cpp__incl.map  _card_profile_manager_adapter_8cpp_source.html  _card_profile_manager_adapter_8h.html  _card_profile_manager_adapter_8h__incl.map  _card_profile_manager_adapter_8h_source.html  _card_resource_8cpp.html  _card_resource_8cpp__incl.map  _card_resource_8cpp__incl.md5  _card_resource_8cpp_source.html  _card_resource_8h.html  _card_resource_8h__dep__incl.md5  _card_resource_8h__incl.map  _card_resource_8h__incl.md5  _card_resource_8h_source.html  _card_resource_profile_configurator_8cpp.html  _card_resource_profile_configurator_8cpp_source.html  _card_resource_profile_configurator_8h.html  _card_resource_profile_configurator_8h_source.html  _card_resource_profile_extension_8h.html  _card_resource_profile_extension_8h_source.html  _card_resource_service_8h.html  _card_resource_service_8h__incl.map  _card_resource_service_8h_source.html  _card_resource_service_adapter_8cpp.html  _card_resource_service_adapter_8cpp__incl.md5  _card_resource_service_adapter_8cpp_source.html  _card_resource_service_adapter_8h.html  _card_resource_service_adapter_8h_source.html  (+102 more)
src/main/: CMakeLists.txt  CardProfileManagerAdapter.cpp  CardProfileManagerAdapter.h  CardResource.cpp  CardResource.h  CardResourceProfileConfigurator.cpp  CardResourceProfileConfigurator.h  CardResourceService.h  CardResourceServiceAdapter.cpp  CardResourceServiceAdapter.h  CardResourceServiceConfigurator.h  CardResourceServiceConfiguratorAdapter.cpp  CardResourceServiceConfiguratorAdapter.h  CardResourceServiceProvider.cpp  CardResourceServiceProvider.h  KeypleServiceResourceExport.h  PluginsConfigurator.cpp  PluginsConfigurator.h  PoolPluginsConfigurator.cpp  PoolPluginsConfigurator.h  ReaderManagerAdapter.cpp  ReaderManagerAdapter.h
src/main/spi/: CardResourceProfileExtension.h  ReaderConfiguratorSpi.h
(+210 files in other folders)
